--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,8 @@
 // Это диспетчер подключений, тут не должно быть ничего, кроме импортов
 
+// Нормалайз
+@import 'normalize.scss';
+
 // Глобальные подключения
 @import 'variables.scss';
 @import 'fonts.scss';
