--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -1,3 +1,9 @@
 //- Подключение примесей
 
 include blocks/main-nav/main-nav.pug
+include blocks/hero/hero.pug
+include blocks/welcome/welcome.pug
+include blocks/about-me/about-me.pug
+include blocks/portfolio/portfolio.pug
+include blocks/contact/contact.pug
+include blocks/footer/footer.pug
