--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,9 @@
 // БЭМ-блоки. Один БЭМ-блок = 1 файл. ВСЕГДА.
 @import './src/blocks/page/page.scss';
 @import './src/blocks/main-nav/main-nav.scss';
+@import './src/blocks/hero/hero.scss';
+@import './src/blocks/welcome/welcome.scss';
+@import './src/blocks/about-me/about-me.scss';
+@import './src/blocks/portfolio/portfolio.scss';
+@import './src/blocks/contact/contact.scss';
+@import './src/blocks/footer/footer.scss';
