--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,10 @@
+$white: #FFFFFF;
+$light-gray: #A7A7A7;
+$gray: #E8E9EB;
+$dark-gray: #606060;
+$accent: #03AFC2;
+$dark-blue: #223843;
+
 $font-family:         -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
 $font-size:           14px;
 $line-height:         1.4;
