--- a/src/blocks/about-me/about-me.pug
+++ b/src/blocks/about-me/about-me.pug
@@ -2,7 +2,7 @@ mixin about-me()
   section.about-me
     img(src="img/about-me-image.jpg" alt="me").about-me__image
     h1.about-me__title My Portfolio
-    h2.about-me__subtitle Developer
+    h2.about-me__subtitle Web Developer
     .about-me__text
       p Равным образом реализация намеченных плановых заданий требуют от нас анализа форм развития. Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовки и реализации форм развития.
       p Равным образом реализация намеченных плановых заданий требуют от нас анализа форм развития. Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовки и реализации форм развития.
