--- a/src/index.pug
+++ b/src/index.pug
@@ -15,7 +15,7 @@ block content
   +welcome()
   +about-me()
   +portfolio()
-  +contact()
+  //+contact()
 block page-bottom
   +footer()  
 //- block append page-bottom
