--- a/src/blocks/welcome/welcome.pug
+++ b/src/blocks/welcome/welcome.pug
@@ -4,6 +4,6 @@ mixin welcome()
       img(src="img/welcome-image-1.jpg" alt="Laptop on wood")
     .welcome__middle
       h2 Marking it happend
-      p Равным образом реализация намеченных плановых заданий требуют от нас анализа форм развития. Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности способствует подготовки и реализации форм развития.
+      p Равным образом реализация намеченных плановых заданий требуют от нас анализа форм развития. 
     .welcome__right
       img(src="img/welcome-image-2.jpg" alt="Laptop on wood")
