--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -2,10 +2,13 @@ mixin footer()
   footer.footer
     p Follow me on social media
     .social__icons
-      svg(width="50", height="50").social__icon
-        use(xlink:href="img/sprite-svg.svg#twitter")
-      svg(width="50", height="50").social__icon
-        use(xlink:href="img/sprite-svg.svg#github")
-      svg(width="50", height="50").social__icon
-        use(xlink:href="img/sprite-svg.svg#vk")    
-    p.social__copyright  Copyright   
+      a(href="#")
+        svg(width="50", height="50").social__icon
+          use(xlink:href="img/sprite-svg.svg#twitter")
+      a(href="#")
+        svg(width="50", height="50").social__icon
+          use(xlink:href="img/sprite-svg.svg#github")
+      a(href="#")
+        svg(width="50", height="50").social__icon
+          use(xlink:href="img/sprite-svg.svg#vk")
+    p.social__copyright  Copyright 2018 Ser Portfolio
