--- a/src/blocks/portfolio/portfolio.pug
+++ b/src/blocks/portfolio/portfolio.pug
@@ -2,41 +2,41 @@ mixin portfolio()
   section.portfolio
     h1 My work
     .portfolio__items
-      
+
       <!--DEV Portfolio item 1 -->
       figure.portfolio__item
         img(src="img/portfolio_1.png" alt="#")
-        figcaption 
+        figcaption
           h2.portfolio__title Project Name
           p.portfolio__description Равным образом реализация намеченных плановых заданий требуют от нас
           a(href='#').portfolio__link More Info
-      
+
       <!--DEV Portfolio item 2 -->
-      figure.portfolio__item.featured
-        img(src="img/portfolio_1.png" alt="#")
-        figcaption 
+      figure.portfolio__item
+        img(src="img/portfolio_2.png" alt="#")
+        figcaption
           h2.portfolio__title Project Name
           p.portfolio__description Равным образом реализация намеченных плановых заданий требуют от нас
           a(href='#').portfolio__link More Info
       <!--DEV Portfolio item 3 -->
       figure.portfolio__item.featured
-        img(src="img/portfolio_1.png" alt="#")
-        figcaption 
+        img(src="img/portfolio_3.png" alt="#")
+        figcaption
           h2.portfolio__title Project Name
           p.portfolio__description Равным образом реализация намеченных плановых заданий требуют от нас
-          a(href='#').portfolio__link More Info     
+          a(href='#').portfolio__link More Info
 
       <!--DEV Portfolio item 4 -->
-      figure.portfolio__item.featured
-        img(src="img/portfolio_1.png" alt="#")
-        figcaption 
+      figure.portfolio__item
+        img(src="img/portfolio_4.png" alt="#")
+        figcaption
           h2.portfolio__title Project Name
           p.portfolio__description Равным образом реализация намеченных плановых заданий требуют от нас
-          a(href='#').portfolio__link More Info     
+          a(href='#').portfolio__link More Info
       <!--DEV Portfolio item 5 -->
-      figure.portfolio__item.featured
-        img(src="img/portfolio_1.png" alt="#")
-        figcaption 
+      figure.portfolio__item
+        img(src="img/portfolio_5.png" alt="#")
+        figcaption
           h2.portfolio__title Project Name
           p.portfolio__description Равным образом реализация намеченных плановых заданий требуют от нас
-          a(href='#').portfolio__link More Info      
+          a(href='#').portfolio__link More Info
