--- a/src/index.pug
+++ b/src/index.pug
@@ -9,14 +9,14 @@ block meta
 //-   script(src='some.js')
 
 block nav
-  
+  +nav()
 block content
-  +hero()  
+  +hero()
   +welcome()
   +about-me()
   +portfolio()
-  //+contact()
+  +contact()
 block page-bottom
-  +footer()  
+  +footer()
 //- block append page-bottom
 //-   script(src='some.js')
