--- a/src/mixins.pug
+++ b/src/mixins.pug
@@ -7,3 +7,4 @@ include blocks/about-me/about-me.pug
 include blocks/portfolio/portfolio.pug
 include blocks/contact/contact.pug
 include blocks/footer/footer.pug
+include blocks/nav/nav.pug
