--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -1,9 +1,36 @@
-// В этом файле должны быть стили для БЭМ-блока footer, его элементов, 
+// В этом файле должны быть стили для БЭМ-блока footer, его элементов,
 // модификаторов, псевдоселекторов, псевдоэлементов, @media-условий...
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
 .footer {
 
-  $block-name:                &; // #{$block-name}__element
-
+  background: $dark-blue;
+  padding: 5em 0;
+  text-align: center;
 }
+
+.social__icons a {
+  display: flex;
+  width: 25%;
+  height: 25%;
+}
+
+.social__icons {
+  @include container($max-width: 15em);
+  display: flex;
+  justify-content: space-between;
+  margin: 1.7em auto 4em;
+}
+
+.social__copyright {
+  &::before {
+    content: '';
+    display: block;
+    height: 1px;
+    background: rgba($white, .25);
+    margin-bottom: 4em;
+    width: 25%;
+    margin: 4em auto;
+  }
+}
+
