--- a/src/blocks/portfolio/portfolio.scss
+++ b/src/blocks/portfolio/portfolio.scss
@@ -1,4 +1,4 @@
-// В этом файле должны быть стили для БЭМ-блока portfolio, его элементов, 
+// В этом файле должны быть стили для БЭМ-блока portfolio, его элементов,
 // модификаторов, псевдоселекторов, псевдоэлементов, @media-условий...
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
@@ -7,33 +7,61 @@
   background: $light-gray;
   padding: 5em 0;
 
+  h1 {
+    margin-bottom: 1em;
+  }
+
+  &__items {
+    display: flex;
+    flex-wrap: wrap;
+    @include container($max-width: 75rem)
+  }
+
   &__item {
+
     position: relative;
     overflow: hidden;
+    flex: 1 1 20rem;
 
     img {
       display: block;
+      width: 100%;
+      height: 100%;
     }
 
     figcaption {
       position: absolute;
-      top: 0;
+      top: 100%;
       bottom: 0;
       right: 0;
       left: 0;
-      padding: 2em;
-      background: rgba($accent, .5);
+      padding: 1em;
+      background: rgba($accent, .75);
       color: $white;
       text-align: left;
       display: flex;
       flex-direction: column;
+      transition: ease-in-out 250ms;
+    }
+
+    &:hover figcaption,
+    &:focus figcaption {
+      top: 0;
     }
   }
 
   &__title {
     color: $white;
-    font-size: 3.625rem;
+    font-size: 2.5rem;
     margin-bottom: auto;
+  }
+
+  &__description {
+    display: none;
+
+    .featured & {
+      display: block;
+    }
   }
 
   &__link {
@@ -41,11 +69,40 @@
     font-weight: $fw-b;
     font-size: 1.1rem;
     text-decoration: none;
-    border-bottom: 2px solid $white;
+    border-bottom: 3px solid $white;
     align-self: flex-start;
 
     &::after {
-      // 
+      content: url(../img/right-arrow.svg);
+      display: inline-block;
+      margin-left: .2em;
     }
   }
 }
+
+@supports (display: grid) {
+  .portfolio__items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    @include mq {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+
+  .portfolio__item.featured {
+    grid-column: span 2;
+    grid-row: 1 / span 2;
+  }
+
+  .featured {
+    .portfolio__title {
+    font-size: 5rem
+    }
+
+    .portfolio__description {
+      display: block;
+    }
+  }
+}
+
